@startuml ERD_CarLab
' ============================================================================
' ERD диаграмма информационной системы "Car Lab"
' Автосервис - Система управления заявками на обслуживание
' ============================================================================

' Настройки внешнего вида
skinparam linetype ortho
skinparam shadowing false
skinparam backgroundColor #FEFEFE
skinparam roundcorner 8

' Настройка цветов для сущностей
skinparam entity {
  BackgroundColor #E8F4F8
  BorderColor #2C5F7F
  FontSize 11
  FontStyle bold
}

' Настройка стилей связей
skinparam class {
  ArrowColor #555555
  ArrowThickness 2
}

' ============================================================================
' ГРУППА 1: УПРАВЛЕНИЕ ДОСТУПОМ
' ============================================================================

package "Управление доступом" #F0F8FF {
  entity "USERS\n<size:9>(Пользователи системы)</size>" as users #FFE6E6 {
    **<color:blue>🔑 id</color>** : UUID <<PK>>
    ==
    <color:green>✓ email</color> : VARCHAR <<UNIQUE>>
    password_hash : VARCHAR
    full_name : VARCHAR
    <color:orange>role</color> : VARCHAR
    <size:9><i>(admin, master)</i></size>
    --
    created_at : TIMESTAMP
  }
}

' ============================================================================
' ГРУППА 2: КЛИЕНТЫ И АВТОМОБИЛИ
' ============================================================================

package "Клиенты и автомобили" #F0FFF0 {
  entity "CLIENTS\n<size:9>(Клиенты автосервиса)</size>" as clients #E6FFE6 {
    **<color:blue>🔑 id</color>** : UUID <<PK>>
    ==
    first_name : VARCHAR
    last_name : VARCHAR
    <color:red>📞 phone</color> : VARCHAR
    email : VARCHAR
    --
    created_at : TIMESTAMP
  }

  entity "VEHICLES\n<size:9>(Автомобили клиентов)</size>" as vehicles #E6FFE6 {
    **<color:blue>🔑 id</color>** : UUID <<PK>>
    ==
    <color:red>🔗 client_id</color> : UUID <<FK>>
    --
    <color:purple>🚗 brand</color> : VARCHAR
    <color:purple>model</color> : VARCHAR
    year : INT
    vin : VARCHAR
    license_plate : VARCHAR
    --
    created_at : TIMESTAMP
  }
}

' ============================================================================
' ГРУППА 3: ЗАЯВКИ НА ОБСЛУЖИВАНИЕ
' ============================================================================

package "Заявки и работы" #FFFEF0 {
  entity "SERVICE_REQUESTS\n<size:9>(Заявки на обслуживание)</size>" as requests #FFFFCC {
    **<color:blue>🔑 id</color>** : UUID <<PK>>
    ==
    <color:green>✓ request_number</color> : VARCHAR <<UNIQUE>>
    <color:green>✓ tracking_token</color> : VARCHAR <<UNIQUE>>
    --
    <color:red>🔗 client_id</color> : UUID <<FK>>
    <color:red>🔗 vehicle_id</color> : UUID <<FK>>
    --
    description : TEXT
    <color:orange>status</color> : VARCHAR
    <size:9><i>(new, in_progress, completed)</i></size>
    assigned_master : VARCHAR
    <color:purple>📊 progress_percentage</color> : INT (0-100)
    --
    <color:green>💰 total_amount</color> : DECIMAL(10,2)
    <color:orange>payment_status</color> : VARCHAR
    <size:9><i>(paid, unpaid)</i></size>
    --
    estimated_completion : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  entity "REQUEST_WORKS\n<size:9>(Работы по заявке)</size>" as works #FFFFCC {
    **<color:blue>🔑 id</color>** : UUID <<PK>>
    ==
    <color:red>🔗 request_id</color> : UUID <<FK>>
    --
    <color:purple>🔧 work_name</color> : VARCHAR
    quantity : DECIMAL(10,2)
    unit_price : DECIMAL(10,2)
    <color:green>💰 total_price</color> : DECIMAL(10,2)
    --
    created_at : TIMESTAMP
  }
}

' ============================================================================
' ГРУППА 4: ИСТОРИЯ И АУДИТ
' ============================================================================

package "История изменений" #FFF0F5 {
  entity "REQUEST_STATUS_HISTORY\n<size:9>(История статусов заявок)</size>" as history #FFE6F0 {
    **<color:blue>🔑 id</color>** : UUID <<PK>>
    ==
    <color:red>🔗 request_id</color> : UUID <<FK>>
    --
    old_status : VARCHAR
    new_status : VARCHAR
    --
    <color:red>🔗 changed_by</color> : UUID <<FK>>
    created_at : TIMESTAMP
  }
}

' ============================================================================
' СВЯЗИ МЕЖДУ ТАБЛИЦАМИ
' ============================================================================

' Клиенты → Автомобили (1:N)
clients ||--o{ vehicles : "   владеет\n   1:N   "

' Клиенты → Заявки (1:N)
clients ||--o{ requests : "   создает\n   1:N   "

' Автомобили → Заявки (1:N)
vehicles ||--o{ requests : "   обслуживается\n   1:N   "

' Заявки → Работы (1:N, CASCADE)
requests ||--o{ works : "   содержит\n   1:N\n   <color:red>CASCADE</color>   "

' Заявки → История (1:N, CASCADE)
requests ||--o{ history : "   имеет историю\n   1:N\n   <color:red>CASCADE</color>   "

' Пользователи → История (1:N)
users ||--o{ history : "   изменяет\n   1:N   "

' ============================================================================
' АННОТАЦИИ И ПОЯСНЕНИЯ
' ============================================================================

note top of users
  <b>Сотрудники автосервиса</b>
  ──────────────────────
  • Аутентификация по email
  • Пароль хешируется (bcrypt)
  • Роли: admin, master
  • Доступ к CRM-системе
end note

note top of clients
  <b>База клиентов</b>
  ──────────────────────
  • Создаются автоматически при подаче заявки
  • Один клиент может владеть несколькими авто
  • Телефон - обязательное поле
end note

note top of vehicles
  <b>Автомобили клиентов</b>
  ──────────────────────
  • Каждый авто принадлежит одному клиенту
  • VIN и госномер - опциональны
  • История обслуживания через заявки

  <b>Индексы:</b> client_id
end note

note bottom of requests
  <b>🎯 Основная сущность системы</b>
  ────────────────────────────────
  • Уникальный номер заявки (REQ-XXXXXX)
  • Токен для отслеживания клиентом
  • Автоматический расчет стоимости
  • Отслеживание прогресса (0-100%)
  • Статусы: new → in_progress → completed

  <b>Индексы:</b> status, request_number,
                tracking_token, client_id
end note

note bottom of works
  <b>Работы и услуги</b>
  ──────────────────────
  • Формирование сметы
  • Автоматический расчет:
    total_price = quantity × unit_price
  • <color:red>⚠ Каскадное удаление</color>
    при удалении заявки

  <b>Индексы:</b> request_id
end note

note bottom of history
  <b>Аудит изменений</b>
  ──────────────────────
  • Полная история статусов
  • Фиксация ответственного
  • Временные метки изменений
  • <color:red>⚠ Каскадное удаление</color>

  <b>Индексы:</b> request_id
end note

' ============================================================================
' ЛЕГЕНДА
' ============================================================================

legend right
  <b>═══════════ ЛЕГЕНДА ═══════════</b>

  <b>Обозначения полей:</b>
  <color:blue>🔑</color> - Первичный ключ (PK)
  <color:red>🔗</color> - Внешний ключ (FK)
  <color:green>✓</color> - Уникальное значение (UNIQUE)
  <color:orange>●</color> - Перечисление (ENUM)
  <color:purple>●</color> - Важное бизнес-поле
  <color:green>💰</color> - Денежные значения
  <color:red>📞</color> - Контактная информация
  <color:purple>🚗</color> - Информация об авто

  <b>Типы связей:</b>
  ||--o{ - Один ко многим (1:N)
  <color:red>CASCADE</color> - Каскадное удаление

  <b>Типы данных:</b>
  UUID - Универсальный идентификатор
  VARCHAR - Строка переменной длины
  TEXT - Неограниченный текст
  INT - Целое число
  DECIMAL(10,2) - Деньги (до 99,999,999.99)
  TIMESTAMP - Дата и время

  <b>Особенности:</b>
  • Все таблицы используют UUID как PK
  • Автогенерация id, created_at, updated_at
  • Индексы на всех FK и часто используемых полях

  <b>СУБД:</b> PostgreSQL 14+
  <b>ORM:</b> Prisma 5.x
endlegend

' Заголовок диаграммы
title
  <size:18><b>ERD Диаграмма информационной системы "Car Lab"</b></size>
  <size:12>Автосервис - Система управления заявками на обслуживание</size>
  ═══════════════════════════════════════════════════════
  <size:10>База данных: <b>PostgreSQL 14+</b> | ORM: <b>Prisma 5.x</b> | Таблиц: <b>6</b> | Связей: <b>6</b></size>
end title

@enduml
